# pr0gress

./: .gitignore  alembic.ini  docker-compose.yaml  pyproject.toml
src/: config.py  logger.py  main.py
src/bot/handlers/: free_trial.py  starting.py
src/bot/keyboards/: main_menu.py  subscription.py
src/dao/: __init__.py  base.py  free_trial.py  payments.py  subscriptions.py  users.py
src/database/: __init__.py  connection.py
src/database/migrations/: env.py
src/database/migrations/versions/: 001_inital_schema.py  002_add_trial_week.py
src/database/models/: __init__.py  base.py  free_trial.py  payment.py  subscriptions.py  users.py
src/domain/user/: context.py  models.py  service.py
src/services/: free_trial.py  main_menu.py  start_command.py
